---
source: libs/stringtable/tests/sort.rs
expression: stringtable
---
Project {
    inner: InnerProject {
        name: "test",
        packages: [
            Package {
                name: "test",
                keys: [
                    Key {
                        id: "Comments be gone!",
                        original: Some(
                            "I leave this for later",
                        ),
                        english: Some(
                            "I leave this for later",
                        ),
                        czech: None,
                        french: None,
                        spanish: None,
                        italian: None,
                        polish: None,
                        portuguese: None,
                        russian: None,
                        german: None,
                        korean: None,
                        japanese: None,
                        chinese: None,
                        chinesesimp: None,
                        turkish: None,
                        swedish: None,
                        slovak: None,
                        serbocroatian: None,
                        norwegian: None,
                        icelandic: None,
                        hungarian: None,
                        greek: None,
                        finnish: None,
                        dutch: None,
                        ukrainian: None,
                        danish: None,
                        bulgarian: None,
                        latin: None,
                    },
                    Key {
                        id: "I will be empty",
                        original: Some(
                            "hey",
                        ),
                        english: Some(
                            "hey",
                        ),
                        czech: None,
                        french: None,
                        spanish: None,
                        italian: None,
                        polish: None,
                        portuguese: None,
                        russian: Some(
                            "hey",
                        ),
                        german: Some(
                            "hey",
                        ),
                        korean: None,
                        japanese: None,
                        chinese: None,
                        chinesesimp: None,
                        turkish: None,
                        swedish: None,
                        slovak: None,
                        serbocroatian: None,
                        norwegian: None,
                        icelandic: None,
                        hungarian: None,
                        greek: None,
                        finnish: None,
                        dutch: None,
                        ukrainian: None,
                        danish: None,
                        bulgarian: None,
                        latin: None,
                    },
                    Key {
                        id: "I will change the xml structure a little",
                        original: Some(
                            "",
                        ),
                        english: Some(
                            "",
                        ),
                        czech: Some(
                            "",
                        ),
                        french: Some(
                            "",
                        ),
                        spanish: None,
                        italian: None,
                        polish: None,
                        portuguese: None,
                        russian: None,
                        german: None,
                        korean: None,
                        japanese: None,
                        chinese: None,
                        chinesesimp: None,
                        turkish: None,
                        swedish: None,
                        slovak: None,
                        serbocroatian: None,
                        norwegian: None,
                        icelandic: None,
                        hungarian: None,
                        greek: None,
                        finnish: None,
                        dutch: None,
                        ukrainian: None,
                        danish: None,
                        bulgarian: None,
                        latin: None,
                    },
                    Key {
                        id: "My things get unescaped",
                        original: Some(
                            "&quot;&apos;",
                        ),
                        english: Some(
                            "&quot;&apos;",
                        ),
                        czech: None,
                        french: None,
                        spanish: Some(
                            "\"Hello World\"",
                        ),
                        italian: None,
                        polish: None,
                        portuguese: None,
                        russian: Some(
                            "&quot;&apos;",
                        ),
                        german: Some(
                            "&quot;&apos;",
                        ),
                        korean: None,
                        japanese: None,
                        chinese: None,
                        chinesesimp: None,
                        turkish: None,
                        swedish: None,
                        slovak: None,
                        serbocroatian: None,
                        norwegian: None,
                        icelandic: None,
                        hungarian: None,
                        greek: None,
                        finnish: None,
                        dutch: None,
                        ukrainian: None,
                        danish: None,
                        bulgarian: None,
                        latin: None,
                    },
                ],
                containers: [],
            },
        ],
    },
    path: "/gh822.xml",
    keys: {
        "i will change the xml structure a little": [
            Position {
                start: LineCol(
                    176,
                    (
                        5,
                        18,
                    ),
                ),
                end: LineCol(
                    216,
                    (
                        5,
                        58,
                    ),
                ),
                path: "/gh822.xml",
            },
        ],
        "i will be empty": [
            Position {
                start: LineCol(
                    375,
                    (
                        11,
                        18,
                    ),
                ),
                end: LineCol(
                    390,
                    (
                        11,
                        33,
                    ),
                ),
                path: "/gh822.xml",
            },
        ],
        "my things get unescaped": [
            Position {
                start: LineCol(
                    565,
                    (
                        17,
                        18,
                    ),
                ),
                end: LineCol(
                    588,
                    (
                        17,
                        41,
                    ),
                ),
                path: "/gh822.xml",
            },
        ],
        "comments be gone!": [
            Position {
                start: LineCol(
                    921,
                    (
                        25,
                        18,
                    ),
                ),
                end: LineCol(
                    938,
                    (
                        25,
                        35,
                    ),
                ),
                path: "/gh822.xml",
            },
        ],
        "new entry used in future release, not yet used": [
            Position {
                start: LineCol(
                    1276,
                    (
                        33,
                        18,
                    ),
                ),
                end: LineCol(
                    1322,
                    (
                        33,
                        64,
                    ),
                ),
                path: "/gh822.xml",
            },
        ],
    },
    source: "<?xml version=\"1.0\" encoding=\"utf-8\" ?>\n<Project name=\"test\">\n    <Package name=\"test\">\n        <!-- The I copy paste this part of my language entry thing -->\n        <Key ID=\"I will change the xml structure a little\">\n            <Original></Original>\n            <English></English>\n            <Czech></Czech>\n            <French></French>\n        </Key>\n        <Key ID=\"I will be empty\">\n            <original>hey</original>\n            <english>hey</english>\n            <german>hey</german>\n            <russian>hey</russian>\n        </Key>\n        <Key ID=\"My things get unescaped\">\n            <Original>&quot;&apos;</Original>\n            <English>&quot;&apos;</English>\n            <German>&quot;&apos;</German>\n            <Russian>&quot;&apos;</Russian>\n            <Spanish>\"Hello World\"</Spanish>\n        </Key>\n        <!-- a maybe more legitimate use of a comment which gets removed -->\n        <Key ID=\"Comments be gone!\">\n            <Original>I leave this for later</Original>\n            <English>I leave this for later</English>\n            <!-- <German>I am totally a correct translated entry waiting for approval!</German> -->\n            <!-- <Russian></Russian> -->\n            <!-- <Polish></Polish> -->\n        </Key>\n        <!--\n        <Key ID=\"new entry used in future release, not yet used\">\n            <Original>The future</Original>\n            <English>The future</English>\n        </Key>\n        -->\n    </Package>\n</Project>\n",
    comments: [
        (
            "<!--\n        <Key ID=\"new entry used in future release, not yet used\">\n            <Original>The future</Original>\n            <English>The future</English>\n        </Key>\n        -->",
            "</Package>",
            None,
        ),
        (
            "<!-- <German>I am totally a correct translated entry waiting for approval!</German> -->\n            <!-- <Russian></Russian> -->\n            <!-- <Polish></Polish> -->",
            "</Key>",
            Some(
                "<Key ID=\"Comments be gone!\">",
            ),
        ),
        (
            "<!-- The I copy paste this part of my language entry thing -->",
            "<Key ID=\"I will change the xml structure a little\">",
            None,
        ),
        (
            "<!-- a maybe more legitimate use of a comment which gets removed -->",
            "<Key ID=\"Comments be gone!\">",
            None,
        ),
    ],
}
